tests/traci/get_variable/MeMeDetector/errors/UnsupportedVariable/errors.traci
#Error while connecting: tcpip::Socket::connect() @ connect: Connection refused
Error: Answered with error to command 0xa1: Get MeMeDetector Variable: unsupported variable 0xff specified
